<resources>
    <string name="app_name">ScoreCards</string>
    <string name="maxRank"><b>%s</b></string>
    <string name="currentRank"><b>%s</b></string>
    <string name="currentRatingNum">Rating \n <b>%d</b></string>
    <string name="noOfProblems">%d \n Accepted Problems</string>
    <string name="maxRating">Max Rating \n <b>%d</b></string>
    <string name="Newbie"> "#cccccc" </string>
    <string name="currMonth"> "Jan" </string>
    <string name="currYear"> "2019" </string>
</resources>