<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/md_theme_dark_background"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardDesign"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="10dp"
        app:cardCornerRadius="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/topLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_default="percent"
                app:layout_constraintHeight_percent=".70"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/userImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="userImage"
                    android:elevation="1dp"
                    android:src="@drawable/my_pic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/bottomGradient"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:background="@drawable/bottom_layout_gradient"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/userImage" />

                <TextView
                    android:id="@+id/userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="16dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:elevation="2dp"
                    android:textAlignment="center"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    android:outlineProvider="background"
                    android:background="@drawable/username_rounded_background"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="UserName" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/bottomLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_default="percent"
                app:layout_constraintHeight_percent=".30"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/topLayout">

                <TextView
                    android:id="@+id/currentRank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="Rank"
                    android:textAlignment="center"
                    android:textColor="#FFD700"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/currentRankName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/currentRank"
                    android:textAlignment="center"
                    android:textColor="#FFD700"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="@id/currentRank"
                    app:layout_constraintTop_toBottomOf="@id/currentRank" />


                <TextView
                    android:id="@+id/maxRank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="MaxRank"
                    android:textAlignment="center"
                    android:textColor="#FFD700"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/queSolved"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/rectangle"
                    android:text="@string/noOfProblems"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/maxRating"
                    app:layout_constraintHorizontal_bias="0.578"
                    app:layout_constraintStart_toEndOf="@id/currentRating"
                    app:layout_constraintTop_toBottomOf="@id/currentRank"
                    app:layout_constraintVertical_bias="0.761" />

                <TextView
                    android:id="@+id/currentRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/rectangle"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/currentRatingNum"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/currentRank"
                    app:layout_constraintVertical_bias="0.761" />

                <TextView
                    android:id="@+id/maxRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/rectangle"
                    android:text="@string/maxRating"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/maxRank"
                    app:layout_constraintVertical_bias="0.761" />

                <TextView
                    android:id="@+id/maxRankName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-15dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/maxRank"
                    android:textAlignment="center"
                    android:textColor="#FFD700"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="@id/maxRank"
                    app:layout_constraintTop_toBottomOf="@id/maxRank"
                    app:layout_constraintVertical_bias="0.0"
                    app:layout_constraintVertical_chainStyle="packed" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

